@@ -96,7 +96,7 @@
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.4.2</version>
         <configuration>
-          <argLine>-Dcuke4duke.objectFactory=cuke4duke.internal.java.PicoFactory</argLine>
+          <argLine>-Dcuke4duke.objectFactory=cuke4duke.internal.jvmclass.PicoFactory</argLine>
           <excludes>
             <exclude>**/CucumberRunnerTest.java</exclude>
             <exclude>**/FeatureTest.java</exclude>
