@@ -3,6 +3,7 @@ package cuke4duke.internal.java;
 import cuke4duke.internal.language.AbstractHook;
 import cuke4duke.internal.language.MethodInvoker;
 import cuke4duke.internal.JRuby;
+import cuke4duke.internal.jvmclass.ClassLanguage;
 import org.jruby.RubyArray;
 import org.jruby.runtime.builtin.IRubyObject;
 
@@ -12,17 +13,17 @@ import java.util.List;
 public class JavaHook extends AbstractHook {
     private final MethodInvoker methodInvoker;
     private final Method method;
-    private final JavaLanguage javaLanguage;
+    private final ClassLanguage classLanguage;
 
-    public JavaHook(List<String> tagNames, Method method, JavaLanguage javaLanguage) {
+    public JavaHook(List<String> tagNames, Method method, ClassLanguage classLanguage) {
         super(tagNames);
         this.method = method;
-        this.javaLanguage = javaLanguage;
+        this.classLanguage = classLanguage;
         this.methodInvoker = new MethodInvoker(method);
     }
 
     public void invoke(String location, IRubyObject scenario) throws Throwable {
-        Object target = javaLanguage.getTarget(method.getDeclaringClass());
+        Object target = classLanguage.getTarget(method.getDeclaringClass());
         RubyArray args = RubyArray.newArray(JRuby.getRuntime());
         if(method.getParameterTypes().length == 1) {
             args.append(scenario);
