@@ -67,13 +67,13 @@
         <artifactId>cuke4duke-maven-plugin</artifactId>
         <configuration>
           <jvmArgs>
-            <jvmArg>-Dcuke4duke.objectFactory=cuke4duke.internal.java.PicoFactory</jvmArg>
+            <jvmArg>-Dcuke4duke.objectFactory=cuke4duke.internal.jvmclass.PicoFactory</jvmArg>
           </jvmArgs>
           <cucumberArgs>
             <cucumberArg>--color</cucumberArg>
             <cucumberArg>--verbose</cucumberArg>
             <cucumberArg>--require</cucumberArg>
-            <cucumberArg>${basedir}/src/test/java</cucumberArg>
+            <cucumberArg>${basedir}/target/test-classes</cucumberArg>
           </cucumberArgs>
           <gems>
             <gem>cucumber:0.3.100</gem>
